--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@ svg {
     border: 1px solid black;
 }
 circle {
-    fill: red;
+    fill: purple;
+    opacity: .6;
+}
+circle:hover {
+    opacity: 1;
 }
 </style>
 </head>
